// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly fetching ebooks 1`] = `
.c0 {
  font-weight: bold;
  font-size: 18px;
}

.c1 {
  font-weight: bold;
  font-size: 14px;
}

.c2 {
  font-size: 14px;
}

<div>
  <header>
    <span
      class="c0"
    >
      E-book Store
    </span>
  </header>
  <div>
    <div>
      Loading...
    </div>
  </div>
  <footer>
    <div>
      <span
        class="c1"
      >
        E-book Store
      </span>
      <span
        class="c2"
      >
        Powered by EBANX • Products B2B
      </span>
    </div>
  </footer>
</div>
`;

exports[`renders correctly fetching ebooks failed 1`] = `
.c0 {
  font-weight: bold;
  font-size: 18px;
}

.c1 {
  font-weight: bold;
  font-size: 14px;
}

.c2 {
  font-size: 14px;
}

<div>
  <header>
    <span
      class="c0"
    >
      E-book Store
    </span>
  </header>
  <div>
    <div>
      Fail
    </div>
  </div>
  <footer>
    <div>
      <span
        class="c1"
      >
        E-book Store
      </span>
      <span
        class="c2"
      >
        Powered by EBANX • Products B2B
      </span>
    </div>
  </footer>
</div>
`;

exports[`renders correctly purchasing fail 1`] = `
.c0 {
  font-weight: bold;
  font-size: 18px;
}

.c1 {
  font-weight: bold;
  font-size: 14px;
}

.c2 {
  font-size: 14px;
}

<div>
  <header>
    <span
      class="c0"
    >
      E-book Store
    </span>
  </header>
  <div>
    <div>
      Purchase failed
    </div>
  </div>
  <footer>
    <div>
      <span
        class="c1"
      >
        E-book Store
      </span>
      <span
        class="c2"
      >
        Powered by EBANX • Products B2B
      </span>
    </div>
  </footer>
</div>
`;

exports[`renders correctly purchasing initial 1`] = `
.c2 {
  position: relative;
  width: 20px;
  height: 20px;
  border: 2px solid black;
}

.c4 {
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
}

.c0 {
  font-weight: bold;
  font-size: 18px;
}

.c5 {
  font-weight: bold;
  font-size: 14px;
}

.c1 {
  font-size: 14px;
}

.c6 {
  border: none;
  height: 2px;
  background: #dedede;
}

<div>
  <header>
    <span
      class="c0"
    >
      E-book Store
    </span>
  </header>
  <div>
    <span
      class="c1"
    >
      Welcome to the best place for you to learn about Latin América E-commerce. Start to learn now and discovery ways options to improve your sales.
    </span>
    <div>
      <ul>
        <li>
          <div>
            <div
              class="c2"
            >
              <div
                class="c3"
              />
              <input
                class="c4"
                type="checkbox"
                value="1"
              />
            </div>
            <img
              class=""
              src="public/images/ebooks/1.png"
            />
            <div>
              <span
                class="c5"
              >
                Ebook 1
              </span>
              <span
                class="c1"
              >
                The ebook 1
              </span>
            </div>
            <span
              class="c0"
            >
              R$ 100,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <div
              class="c2"
            >
              <div
                class="c3"
              />
              <input
                class="c4"
                type="checkbox"
                value="2"
              />
            </div>
            <img
              class=""
              src="public/images/ebooks/2.png"
            />
            <div>
              <span
                class="c5"
              >
                Ebook 2
              </span>
              <span
                class="c1"
              >
                The ebook 2
              </span>
            </div>
            <span
              class="c0"
            >
              R$ 200,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <div
              class="c2"
            >
              <div
                class="c3"
              />
              <input
                class="c4"
                type="checkbox"
                value="3"
              />
            </div>
            <img
              class=""
              src="public/images/ebooks/3.png"
            />
            <div>
              <span
                class="c5"
              >
                Ebook 3
              </span>
              <span
                class="c1"
              >
                The ebook 3
              </span>
            </div>
            <span
              class="c0"
            >
              R$ 300,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <div
              class="c2"
            >
              <div
                class="c3"
              />
              <input
                class="c4"
                type="checkbox"
                value="4"
              />
            </div>
            <img
              class=""
              src="public/images/ebooks/4.png"
            />
            <div>
              <span
                class="c5"
              >
                Ebook 4
              </span>
              <span
                class="c1"
              >
                The ebook 4
              </span>
            </div>
            <span
              class="c0"
            >
              R$ 400,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <div
              class="c2"
            >
              <div
                class="c3"
              />
              <input
                class="c4"
                type="checkbox"
                value="5"
              />
            </div>
            <img
              class=""
              src="public/images/ebooks/5.png"
            />
            <div>
              <span
                class="c5"
              >
                Ebook 5
              </span>
              <span
                class="c1"
              >
                The ebook 5
              </span>
            </div>
            <span
              class="c0"
            >
              R$ 500,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <div
              class="c2"
            >
              <div
                class="c3"
              />
              <input
                class="c4"
                type="checkbox"
                value="6"
              />
            </div>
            <img
              class=""
              src="public/images/ebooks/6.png"
            />
            <div>
              <span
                class="c5"
              >
                Ebook 6
              </span>
              <span
                class="c1"
              >
                The ebook 6
              </span>
            </div>
            <span
              class="c0"
            >
              R$ 600,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <div
              class="c2"
            >
              <div
                class="c3"
              />
              <input
                class="c4"
                type="checkbox"
                value="7"
              />
            </div>
            <img
              class=""
              src="public/images/ebooks/7.png"
            />
            <div>
              <span
                class="c5"
              >
                Ebook 7
              </span>
              <span
                class="c1"
              >
                The ebook 7
              </span>
            </div>
            <span
              class="c0"
            >
              R$ 700,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <div
              class="c2"
            >
              <div
                class="c3"
              />
              <input
                class="c4"
                type="checkbox"
                value="8"
              />
            </div>
            <img
              class=""
              src="public/images/ebooks/8.png"
            />
            <div>
              <span
                class="c5"
              >
                Ebook 8
              </span>
              <span
                class="c1"
              >
                The ebook 8
              </span>
            </div>
            <span
              class="c0"
            >
              R$ 800,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <div
              class="c2"
            >
              <div
                class="c3"
              />
              <input
                class="c4"
                type="checkbox"
                value="9"
              />
            </div>
            <img
              class=""
              src="public/images/ebooks/9.png"
            />
            <div>
              <span
                class="c5"
              >
                Ebook 9
              </span>
              <span
                class="c1"
              >
                The ebook 9
              </span>
            </div>
            <span
              class="c0"
            >
              R$ 900,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <div
              class="c2"
            >
              <div
                class="c3"
              />
              <input
                class="c4"
                type="checkbox"
                value="10"
              />
            </div>
            <img
              class=""
              src="public/images/ebooks/10.png"
            />
            <div>
              <span
                class="c5"
              >
                Ebook 10
              </span>
              <span
                class="c1"
              >
                The ebook 10
              </span>
            </div>
            <span
              class="c0"
            >
              R$ 1000,00
            </span>
          </div>
        </li>
      </ul>
      <hr
        class="c6"
      />
      <div>
        <span
          class="c0"
        >
          TOTAL
        </span>
        <span
          class="c0"
        >
          R$ 0,00
        </span>
      </div>
    </div>
    <form>
      <div>
        <header>
          <span
            class=""
          >
            1
          </span>
          <span
            class="c5"
          >
            Personal data
          </span>
        </header>
      </div>
      <div>
        <header>
          <span
            class=""
          >
            2
          </span>
          <span
            class="c5"
          >
            Billing Address
          </span>
        </header>
      </div>
      <div>
        <header>
          <span
            class=""
          >
            3
          </span>
          <span
            class="c5"
          >
            Payment
          </span>
        </header>
      </div>
    </form>
  </div>
  <footer>
    <div>
      <span
        class="c5"
      >
        E-book Store
      </span>
      <span
        class="c1"
      >
        Powered by EBANX • Products B2B
      </span>
    </div>
  </footer>
</div>
`;

exports[`renders correctly purchasing success 1`] = `
.c0 {
  font-weight: bold;
  font-size: 18px;
}

.c1 {
  font-weight: bold;
  font-size: 14px;
}

.c2 {
  font-size: 14px;
}

<div>
  <header>
    <span
      class="c0"
    >
      E-book Store
    </span>
  </header>
  <div>
    <div>
      Purchase success
    </div>
  </div>
  <footer>
    <div>
      <span
        class="c1"
      >
        E-book Store
      </span>
      <span
        class="c2"
      >
        Powered by EBANX • Products B2B
      </span>
    </div>
  </footer>
</div>
`;
